infra/cloudformation/eks-fargate/helm-lambda/k8s/04_service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ${K8S_NAMESPACE}
  name: service-${PROJECT_DEPLOYMENT_NAME}
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-${PROJECT_DEPLOYMENT_NAME}
