infra/cloudformation/eks-fargate/helm-lambda/k8s/05_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${K8S_NAMESPACE}
  name: ingress-${PROJECT_DEPLOYMENT_NAME}
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-${PROJECT_DEPLOYMENT_NAME}
                port:
                  number: 80
